--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+
+
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>My Favorite Foods</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
+
   <body>
-      <h1>My Favorite Foods</h1>
-  </body>
+
+    <div>
+    
+      <h1>Welcome to my favorite food website </h1>
+      <img src="https://cdn.vox-cdn.com/thumbor/mwDaBa76rhoPDw5qnMmSXVgFSxA=/0x0:1350x1080/1200x675/filters:focal(567x432:783x648)/cdn.vox-cdn.com/uploads/chorus_image/image/72672303/Hadramout_TX2.7.jpeg">
+    
+    </div>
+  
+    </body>
+
 </html>
