--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
 <html>
 
   <head>
-    <title>My Favorite Foods</title>
+    <title>My Favorite Show</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+   
   </head>
 
   <body>
 
     <div>
     
-      <h1>Welcome to my favorite food website </h1>
-      <img src="https://cdn.vox-cdn.com/thumbor/mwDaBa76rhoPDw5qnMmSXVgFSxA=/0x0:1350x1080/1200x675/filters:focal(567x432:783x648)/cdn.vox-cdn.com/uploads/chorus_image/image/72672303/Hadramout_TX2.7.jpeg">
-    
+      <h1>Welcome to the Demon Slayer fan club</h1>
+      <img src="https://m.media-amazon.com/images/M/MV5BZjZjNzI5MDctY2Y4YS00NmM4LTljMmItZTFkOTExNGI3ODRhXkEyXkFqcGdeQXVyNjc3MjQzNTI@._V1_.jpg">
+
+      <br/>
+      <a href="about.html">  About!</a>
+      <a href="hits.html">  Arcs!</a>
+      <a href="join.html"> Join da club! </a>
+
     </div>
   
     </body>
