Added a navigation menu to the root HTML page

--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 
   <body>
 
+
+
+    <nav>
+        <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="hits.html">Arcs</a></li>
+        <li><a href="join.html">Join</a></li>
+      </ul>
+    </nav>
+        
+
     <div>
     
       <h1>Welcome to the Demon Slayer fan club</h1>
       <img src="https://m.media-amazon.com/images/M/MV5BZjZjNzI5MDctY2Y4YS00NmM4LTljMmItZTFkOTExNGI3ODRhXkEyXkFqcGdeQXVyNjc3MjQzNTI@._V1_.jpg">
-
-      <br/>
-      <a href="about.html">  About!</a>
-      <a href="hits.html">  Arcs!</a>
-      <a href="join.html"> Join da club! </a>
 
     </div>
   
