--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     
       <h1>Welcome to the Demon Slayer fan club</h1>
       <img src="https://m.media-amazon.com/images/M/MV5BZjZjNzI5MDctY2Y4YS00NmM4LTljMmItZTFkOTExNGI3ODRhXkEyXkFqcGdeQXVyNjc3MjQzNTI@._V1_.jpg">
+      <p id="join">Join the fan club by entering your email address below:</p>
+          <form>
+            <input type="email" placeholder="Enter your email address">
+            <button type="submit">Join</button>
+          </form>
 
     </div>
   
